--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,8 @@
 
 .cont{
   width: max-content;
+  width: 720px;
+  height:385px;
   padding: 24px;
   background-color: $white;
   border-radius: 16px;
