--- a/src/App.scss
+++ b/src/App.scss
@@ -22,5 +22,12 @@
 
   display: grid;
   grid-template-columns: repeat(2, minmax(0,1fr));
+
+  &__input-sect{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 8px 0;
+  }
 }
 
