feat(UI): add hover and cursor effects

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,7 @@
 .cont{
   width: max-content;
   width: 760px;
-  height:385px;
+  // height:385px;
   padding: 24px;
   background-color: $white;
   border-radius: 16px;
