--- a/src/components/display/Display.scss
+++ b/src/components/display/Display.scss
@@ -52,5 +52,10 @@
         color: $cyan-vd;
 
         border-radius: 4px;
+        cursor: pointer;
+
+        &:hover{
+            background-color: $gr-cyan-l;
+        }
     }
 }
