--- a/src/components/numInput/NumInput.scss
+++ b/src/components/numInput/NumInput.scss
@@ -26,7 +26,7 @@
         background-color: $gr-cyan-vl;
         border: none;
         font-size: 24px;
-        padding: 2px 12px;
+        padding: 4px 12px;
 
         border-radius: 4px;
 
@@ -51,4 +51,5 @@
 
 #input__label{
     font-size: 14px;
+    color: $gr-cyan-d;
 }
