--- a/src/components/tipInput/TipInput.scss
+++ b/src/components/tipInput/TipInput.scss
@@ -5,6 +5,8 @@
 
     margin: 24px 0;
 
+    color: $gr-cyan-d;
+
     &__label{
         font-size: 14px;
         font-weight: 700;
@@ -18,7 +20,7 @@
         grid-template-columns: repeat(3, minmax(0,1fr));
         grid-template-rows: repeat(2, minmax(0,1fr));
         grid-gap: 12px;
-        margin-right: 16px;
+        margin-right: 36px;
     }
 
     &__option{
@@ -31,15 +33,39 @@
         font-size: 24px;
         background-color: $cyan-vd;
         border-radius: 4px;
+        padding: 4px 0;
+        cursor: pointer;
+
+        &:hover{
+            background-color: $gr-cyan-d;
+        }
 
         &--custom{
             font-family: 'Space Mono', monospace;
+            color: $cyan-vd;
+            text-align: right;
             background-color: $gr-cyan-vl;
             border:none;
             letter-spacing: -1px;
+            padding: 4px;
+
+            &:hover{
+                background: $gr-cyan-vl;
+                outline: 2px solid $gr-cyan-d;
+            }
+
+            &:focus{
+                outline: 2px solid $gr-cyan;
+            }
+
             &::-webkit-outer-spin-button, &::-webkit-inner-spin-button{
                 -webkit-appearance: none;
                 margin: 0;
+            }
+
+            &::placeholder{
+                
+                text-align: center;
             }
         }
     }
