fix(UX): fix reset button to work as intended

--- a/src/components/tipInput/TipInput.scss
+++ b/src/components/tipInput/TipInput.scss
@@ -69,9 +69,10 @@
             }
 
             &::placeholder{
-                
+                color: $gr-cyan;
                 text-align: center;
             }
+
         }
     }
 }
