--- a/src/App.scss
+++ b/src/App.scss
@@ -49,5 +49,42 @@
   position: absolute;
   font-size: 12px;
   bottom: 1%;
+  justify-self: center;
 }
 
+@media only screen and (max-width: 760px) {
+  .cont{
+    width: 95%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .App{
+    justify-content: flex-start;
+  }
+  
+  #logo{
+    margin: 8%;
+  }
+
+  .cont{
+    padding: 32px 32px 16px 32px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    &__input-sect{
+      padding: 0;
+    }
+  }
+
+  .attribution{
+    width: 240px;
+    text-align: center;
+    position: relative;
+    margin-top: 16px;
+    bottom: 0;
+    word-break: keep-all;
+    align-self: center;
+  }
+}
